[gd_scene load_steps=14 format=3 uid="uid://cdqgsn775dgsp"]

[ext_resource type="Texture2D" uid="uid://c343c8eflu7yf" path="res://res/gui/button_backpack.png" id="1_07xlw"]
[ext_resource type="Script" path="res://crisisPhase/crisis_phase.gd" id="1_23hjb"]
[ext_resource type="PackedScene" uid="uid://cku3etpcuk085" path="res://characters/avatar.tscn" id="1_mrtgi"]
[ext_resource type="PackedScene" uid="uid://cqjid78osbso6" path="res://crisisPhase/day_mngr.tscn" id="5_gk1jp"]
[ext_resource type="PackedScene" path="res://GUI/inventory.tscn" id="6_mo744"]
[ext_resource type="PackedScene" uid="uid://g8y1un3il5jm" path="res://GUI/actionGUI/rest_GUI.tscn" id="11_dfl7m"]
[ext_resource type="PackedScene" uid="uid://bg6lxi4odtfq5" path="res://GUI/summary_end_of_day_gui.tscn" id="11_rvert"]
[ext_resource type="PackedScene" uid="uid://cmd5cgjqucdg8" path="res://GUI/actionGUI/reject_GUI.tscn" id="12_qvhee"]
[ext_resource type="PackedScene" uid="uid://bf1x6jm5o81ck" path="res://stage/stage_mngr.tscn" id="13_8jkao"]
[ext_resource type="PackedScene" uid="uid://dvuhkwet8fnsy" path="res://GUI/actionGUI/change_stage_GUI.tscn" id="13_nblvh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3j7vf"]
size = Vector2(1192, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qj5r1"]
size = Vector2(1192, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yx03m"]
size = Vector2(20, 2048)

[node name="CrisisPhase" type="Node2D"]
process_mode = 3
script = ExtResource("1_23hjb")

[node name="StageMngr" parent="." instance=ExtResource("13_8jkao")]
process_mode = 1

[node name="Avatar" parent="." instance=ExtResource("1_mrtgi")]
process_mode = 1
position = Vector2(571, 1100)

[node name="LevelBorders" type="StaticBody2D" parent="."]

[node name="TopBorder" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2(576, -10)
shape = SubResource("RectangleShape2D_3j7vf")

[node name="LowerBorder" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2(576, 2058)
shape = SubResource("RectangleShape2D_qj5r1")

[node name="LeftBorder" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2(-10, 1024)
shape = SubResource("RectangleShape2D_yx03m")

[node name="RightBorder" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2(1162, 1024)
shape = SubResource("RectangleShape2D_yx03m")

[node name="BtnBackpack" type="TouchScreenButton" parent="."]
z_index = 2
position = Vector2(992, 35)
texture_normal = ExtResource("1_07xlw")

[node name="GUI" type="CenterContainer" parent="."]
z_index = 3
custom_minimum_size = Vector2(284, 512)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 284.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(-5, -5)
size_flags_vertical = 0
mouse_filter = 2

[node name="VBC" type="VBoxContainer" parent="GUI"]
layout_mode = 2

[node name="UpperSection" type="Container" parent="GUI/VBC"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="DayMngr" parent="GUI/VBC/UpperSection" instance=ExtResource("5_gk1jp")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MiddleSection" type="Container" parent="GUI/VBC"]
custom_minimum_size = Vector2(288, 350)
layout_mode = 2

[node name="BackpackGUI" parent="GUI/VBC/MiddleSection" instance=ExtResource("6_mo744")]
visible = false
layout_mode = 2

[node name="SummaryEndOfDayGUI" parent="GUI/VBC/MiddleSection" instance=ExtResource("11_rvert")]
layout_mode = 2

[node name="LowerSection" type="Container" parent="GUI/VBC"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RestGUI" parent="GUI/VBC/LowerSection" instance=ExtResource("11_dfl7m")]
visible = false
layout_mode = 2

[node name="RejectGUI" parent="GUI/VBC/LowerSection" instance=ExtResource("12_qvhee")]
layout_mode = 2

[node name="ChangeStageGUI" parent="GUI/VBC/LowerSection" instance=ExtResource("13_nblvh")]
layout_mode = 2

[connection signal="pressed" from="BtnBackpack" to="GUI/VBC/MiddleSection/BackpackGUI" method="_on_btn_backpack_pressed"]
[connection signal="closed" from="GUI/VBC/MiddleSection/BackpackGUI" to="." method="_on_inventory_closed"]
[connection signal="opened" from="GUI/VBC/MiddleSection/BackpackGUI" to="." method="_on_inventory_opened"]
